docs: Documentation .tex

--- a/human-presentor-doc/main.tex
+++ b/human-presentor-doc/main.tex
@@ -1,5 +1,5 @@
 \documentclass[12pt, headheight=21.8pt, footheight=21.8pt, oneside]{scrbook}
-\linespread{1.5}     \bibliographystyle{abbrvdin}                                   % Zeilenabstand; Literaturverzeichnis-Style
+\linespread{1.5}  % Zeilenabstand
 \addtocontents{toc}{\protect\thispagestyle{empty}}                                  % Seitenzahl auf Inhaltsverzeichnis verhindern
 \usepackage[ngerman]{babel}     \usepackage[utf8]{inputenc}				            % Sprache; Umlaute
 \usepackage{scrlayer-scrpage} 	\cfoot[]{}      \ofoot[\pagemark]{\pagemark} 		% Fußzeilenlayout: center frei, rechts/links pagemark
@@ -37,9 +37,6 @@ Präsentationswerkzeugs, das es ermöglicht, Präsentationen als KI-generierte P
 
 
 \chapter{Zusammenfassung}
-
-
-\bibliography{Literaturverzeichnis}
 
 
 
