ci: report first try

--- a/documentation/misc/acronyms.tex
+++ b/documentation/misc/acronyms.tex
@@ -12,4 +12,7 @@
 
 \newacronym{DTIT}{DTIT}{Deutsche Telekom IT GmbH}
 
+\newacronym{Zonos}{Zonos}{Zyphra/Zonos}
+\newacronym{memo}{memo}{memoavatar/memo}
+
 \glsaddall
