--- a/documentation/misc/settings.tex
+++ b/documentation/misc/settings.tex
@@ -1,6 +1,6 @@
 \newcommand{\Author}{Markus Siegert \& Lucas Buchholz}
-\newcommand{\studentID}{D533 \& D???}
-\newcommand{\deadline}{Deadline: 27.08.2025}
+\newcommand{\studentID}{D533 \& D484}
+\newcommand{\deadline}{Deadline: 22.08.2025}
 \newcommand{\place}{Berlin}
 \newcommand{\Title}{Human Presentator: From Voice to Animated Avatar}
 \newcommand{\documentType}{Cook Book}
