--- a/documentation/sec/introduction.tex
+++ b/documentation/sec/introduction.tex
@@ -7,18 +7,18 @@ images and arbitrary text, leveraging \gls{Zonos} for voice cloning and text-to-
 application ensures data privacy, offline functionality, and the flexibility to customize every
 component.
 
-In today’s media landscape, immersive and personalized audiovisual content drives engagement across
+In today's media landscape, immersive and personalized audiovisual content drives engagement across
 educational platforms, virtual assistants, and marketing campaigns. By combining high-fidelity voice
 cloning with accurate mouth animation, creators can produce dynamic videos without relying on cloud
 services or external APIs. This guide walks you through setting up the environment, preparing your
-data, and executing each stage of the pipeline, from extracting a speaker’s voice characteristics to
-animating a still image’s mouth movements to match the synthesized speech.
+data, and executing each stage of the pipeline, from extracting a speaker's voice characteristics to
+animating a still image's mouth movements to match the synthesized speech.
 
 At the core of this pipeline are two specialized tools: \gls{Zonos} and \gls{memo}. \gls{Zonos}
 provides an end-to-end solution for voice cloning and speech synthesis, enabling you to input a
 short audio sample and generate natural-sounding speech for any text. \gls{memo} handles the visual
 side, mapping the generated audio waveform onto a static image to produce lipid-accurate mouth
-movements. You’ll find detailed instructions for installing dependencies, configuring models, and
+movements. You'll find detailed instructions for installing dependencies, configuring models, and
 running inference scripts, alongside code snippets and troubleshooting advice.
 
 While several open-source and commercial solutions address parts of this workflow, most depend on
